# batman

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  analysis_options.yaml  loop.dart  pubspec.yaml  release.notes.tmp.md
.github/workflows/: ci.yml
dart/: README.md  loop.dart  pubspec.yaml
dart/test/: test_rules.yaml
dart/tool/: count.dart
docker/: Dockerfile  Dockerfile.dev  docker-compose.yaml
docs/: cargo_release_checklist.md  ebpf_patrol_plan.md  log_scanner_example.yaml  review_tui_design.md  rust_port_design.md
examples/: Dockerfile
lib/: batman.dart
lib/src/: batman_settings.dart  email.dart  entry_point.dart  enum_helper.dart  local_settings.dart  log.dart  parsed_args.dart  rules.dart  scanner.dart  settings_yaml_rules.dart  when.dart
resource/: Dockerfile  batman_docker.yaml  batman_linux.yaml  batman_local.yaml  batman_macos.yaml  batman_windows.yaml  docker-compose.dev.yaml  docker-compose.yaml  docker_batman.yaml  local_batman.yaml
resources/: docker_rules.yaml  rules.yaml
src/: app.rs  audit.rs  cli.rs  errors.rs  lib.rs  main.rs  security.rs
src/commands/: accept.rs  baseline.rs  checkpoint.rs  cron.rs  doctor.rs  harden.rs  install.rs  keygen.rs  logs.rs  mod.rs  review.rs  scan.rs  signing.rs
src/config/: batman_config.rs  mod.rs  (+2 more)
test/: checksum.dart
tests/: checkpoint.rs  cli.rs  config.rs  doctor.rs  file_integrity_workflow.rs  harden.rs  install.rs  log_command.rs  logscan.rs  logscan_grouped.rs  logscan_yaml.rs  release_metadata.rs  review_spool.rs  store.rs
tool/: build.dart  build_docker_dev.dart  count.dart  docker_push.dart
(+129 files in other folders)
